--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <form>
-    <input type="date" name="date">
+    <input id="date" type="date" name="date">
     <label for="date">Enter a date</label>
   </input>
   <button type="submit" name="button">Find the Day!</button>
